--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
 
     <title>DOT</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" /> 
 </head>
 <body>
 
@@ -70,8 +71,12 @@
 
 <script type="text/javascript" src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='bower_components/moment/min/moment.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
+
+
 <script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
 
 </body>
 </html>
